--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.5.1",
     "expo": "~52.0.31",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -18,7 +20,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "@expo/vector-icons": "^14.0.2"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
